RESOLVED FIXED 255885
Crash in MomentumEventDispatcher::handleWheelEvent()
https://bugs.webkit.org/show_bug.cgi?id=255885
Summary Crash in MomentumEventDispatcher::handleWheelEvent()
Simon Fraser (smfr)
Reported 2023-04-24 13:30:13 PDT
It's possible for m_momentumEventDispatcher to be null in RemoteLayerTreeEventDispatcher::scrollingThreadHandleWheelEvent
Attachments
Simon Fraser (smfr)
Comment 1 2023-04-24 13:32:43 PDT
Simon Fraser (smfr)
Comment 2 2023-04-24 13:39:51 PDT
EWS
Comment 3 2023-04-26 12:26:47 PDT
Committed 263426@main (abc473b91584): <https://commits.webkit.org/263426@main> Reviewed commits have been landed. Closing PR #13115 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.